# RSA-encryption

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: pylint.yml
documents/: implementation doc.md  implementation document (toteutusdokumentti).md  instruction for use.md  requirement specification (määrittelydokumentti).md  test doc.md  testing document.md  week 1 report.md  week 2 report.md  week 3 report.md  week 4 report.md  week 5 report.md  week 6 report.md
src/: app.py  decryption.py  encryption.py  keygenerator.py  padding.py
src/tests/: known large primes.txt  test_decryption.py  test_encryption.py  test_encyption.py  test_integration.py  test_keygenerator.py  test_padding.py
