[tool.poetry]
name = "rsa-encryption"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
autopep8 = "^2.3.2"
pylint = "^3.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
