[tool.poetry]
name = "rsa-encryption"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
autopep8 = "^2.3.2"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.5"

[tool.pylint]
init-hook='import sys; sys.path.append("src")'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
